# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import codeRouter from "./code";
 import problemsRouter from "./problems";
 import snippetsRouter from "./snippets";
+import packagesRouter from "./packages";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(codeRouter);
 router.use(problemsRouter);
 router.use(snippetsRouter);
+router.use(packagesRouter);
 
 export default router;
